[gd_scene load_steps=5 format=3 uid="uid://lxqb3ka38oig"]

[ext_resource type="Script" path="res://scripts/end_menu.gd" id="1_pd756"]
[ext_resource type="Texture2D" uid="uid://bl2anpirgkoud" path="res://assets/images/bg.png" id="2_267o3"]
[ext_resource type="FontFile" uid="uid://chdvowe0k0cx1" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_e7uxj"]
[ext_resource type="FontFile" uid="uid://xb7fvm78ipq0" path="res://assets/fonts/PixelOperator8.ttf" id="4_5uwo2"]

[node name="End_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pd756")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_267o3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0.890196, 0.458824)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_e7uxj")
theme_override_font_sizes/font_size = 64
text = "COIN HERO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HighScore" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.909804, 0.552941, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_5uwo2")
theme_override_font_sizes/font_size = 32
text = "HIGH SCORE: ###"
horizontal_alignment = 1

[node name="Score" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_5uwo2")
theme_override_font_sizes/font_size = 32
text = "SCORE: ###"
horizontal_alignment = 1

[node name="Replay_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(288, 64)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.237539, 0.237539, 0.237539, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.552941, 0.937255, 1)
theme_override_colors/font_focus_color = Color(0.909804, 0.552941, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_5uwo2")
theme_override_font_sizes/font_size = 32
text = "REPLAY GAME"

[node name="Quit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(288, 64)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.237539, 0.237539, 0.237539, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.552941, 0.937255, 1)
theme_override_colors/font_focus_color = Color(0.917647, 0.584314, 0.941176, 1)
theme_override_fonts/font = ExtResource("4_5uwo2")
theme_override_font_sizes/font_size = 32
text = "QUIT GAME"
